# xcom

src/: CMakeLists.txt
src/platform/windows/: Atomic.cpp  Filesystem.cpp  GUID.cpp  Mutex.cpp  SharedLibrary.cpp
