if (WIN32)
  FILE(GLOB xcomSourcesPlat platform/windows/*.cpp)
  LINK_LIBRARIES(Rpcrt4 Shlwapi)
else()
  FILE(GLOB xcomSourcesPlat platform/linux/*.cpp)
  LINK_LIBRARIES(dl)
endif()
FILE(GLOB xcomSources *.cpp)
INCLUDE_DIRECTORIES(${xcom_SOURCE_DIR}/include)
ADD_LIBRARY(xcom SHARED ${xcomSources} ${xcomSourcesPlat})
#INSTALL(TARGETS xcom LIBRARY DESTINATION lib)
